fixed of images being outside of screen on mobile in articles

--- a/CSS/aboutme.css
+++ b/CSS/aboutme.css
@@ -18,7 +18,6 @@
     margin-right: auto;
     margin-top: 20px;
     margin-bottom: 20px;
-    width: 50%;
 }
 
 .button {
