--- a/CSS/article_writing.css
+++ b/CSS/article_writing.css
@@ -10,13 +10,6 @@
     color: #383436;
 }
 
-@media only screen and (max-width: 600px) {
-    .title {
-        font-size: 2em;
-        padding: 0;
-    }
-}
-
 .title2 {
     text-align: center;
     text-decoration: underline;
@@ -25,17 +18,10 @@
 }
 
 .progress {
-    max-width: 600px;
     margin-left: auto;
     margin-right: auto;
     margin-top: 200px;
     width: 50%;
-}
-
-@media only screen and (max-width: 600px) {
-    .progress {
-        max-width: 300px;
-    }
 }
 
 .separator {
@@ -66,15 +52,16 @@
     padding: 30px 64px;
     text-align: center;
     display: inline-block;
-    font-size: 25px;
+    font-size: 20px;
     border-radius: 18px;
     transition-duration: 0.4s;
-    font-family: 'Spectral', serif;
+    font-family: 'Spectral',
+        serif;
     margin-top: 50px;
 }
 
 .button:hover {
-    background-color: #e7a529;
+    background-color: #bb7b04;
     color: white;
     cursor: pointer;
     box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
@@ -93,11 +80,6 @@
     padding-bottom: 50px;
 }
 
-@media only screen and (max-width: 600px) {
-    .screenshot {
-        max-width: 400px;
-    }
-}
 
 .sticker {
     max-width: 50px;
@@ -105,5 +87,20 @@
     margin-right: auto;
     margin-top: 20px;
     margin-bottom: 20px;
-    width: 50%;
+}
+
+
+@media screen and (max-width: 600px) {
+    .screenshot {
+        max-width: 95vw;
+    }
+
+    .progress {
+        margin: 50px auto 50px auto
+    }
+
+    .title {
+        font-size: 2em;
+        padding: 0;
+    }
 }
